--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,14 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  hive: ^2.2.3
-  uuid: ^4.5.1
   http: ^1.5.0
   connectivity_plus: ^7.0.0
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
-  hive_flutter: ^1.1.0
   sqflite: ^2.4.2
   shared_preferences: ^2.5.3
   google_fonts: 6.1.0
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
